update flink zk linux